- private boolean in userAction model - change private status - get userActions by user_id
