# app/controllers/actionController/controller.go
@@ -2,11 +2,12 @@ package actionController
 
 import (
 	"encoding/json"
-	"errors"
+	"fmt"
 	"github.com/gofiber/fiber/v2"
 	"pood/v2/app/controllers/actionController/createMyActionService"
 	"pood/v2/app/models/actionModel"
 	"pood/v2/app/services/tokenService"
+	"pood/v2/config"
 )
 
 type ActionController struct{}
@@ -15,11 +16,10 @@ func NewActionController() *ActionController {
 	return &ActionController{}
 }
 
-var defaultActionType uint = 3
-
 // CreateMyAction
 // @Summary Создать новый action
 // @Description Создать новый action и привязаться к нему по токену
+// @Description - привязка по **id** или создание по остальным полям
 // @Accept  json
 // @Produce json
 // @Tags    Actions
@@ -29,6 +29,8 @@ var defaultActionType uint = 3
 // @Router  /action [post]
 // @Security ApiKeyAuth
 func (ActionController) CreateMyAction(c *fiber.Ctx) error {
+	var detail string
+
 	user, err := tokenService.CheckToken(c)
 	if err != nil {
 		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{
@@ -44,43 +46,62 @@ func (ActionController) CreateMyAction(c *fiber.Ctx) error {
 		})
 	}
 
-	if reqAction.Name == "" {
+	switch {
+	case reqAction.ID != 0:
+		err, detail = createMyActionService.CreateUserActionByActionId(*user, reqAction)
+	case reqAction.Name != "":
+		err, detail = createMyActionService.CreateUserActionByActionName(*user, reqAction)
+	default:
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-			"detail": errors.New("incorrect request"),
+			"detail": "name or id is required",
 		})
 	}
 
-	if reqAction.Unit == 0 {
-		reqAction.Unit = defaultActionType
-	}
-
-	action, err := createMyActionService.FindActionByName(*reqAction)
-	if err != nil {
-		action, err = createMyActionService.CreateAction(*reqAction)
-		if err != nil {
-			return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-				"detail": err.Error(),
-			})
-		}
-	}
-
-	userAction, err := createMyActionService.CreateUserAction(*user, *action)
 	if err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
 			"detail": err.Error(),
 		})
 	}
 
-	if userAction.Deleted {
-		err = createMyActionService.EnableUserActionAgain(*userAction)
-		if err != nil {
-			return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-				"detail": err.Error(),
-			})
-		}
+	return c.Status(fiber.StatusCreated).JSON(fiber.Map{
+		"detail": detail,
+	})
+}
+
+// FindActionByName
+// @Summary Найти action по неполному совпадению имени
+// @Accept  json
+// @Produce json
+// @Tags    Actions
+// @Param name query string true "name"
+// @Success 200 {array} actionModel.Action
+// @Failure 401 {object} defaultModel.FailedResponse
+// @Router  /actions [get]
+// @Security ApiKeyAuth
+func (ActionController) FindActionByName(c *fiber.Ctx) error {
+	_, err := tokenService.CheckToken(c)
+	if err != nil {
+		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{
+			"detail": err.Error(),
+		})
 	}
 
-	return c.Status(fiber.StatusCreated).JSON(fiber.Map{
-		"detail": "action created",
+	name := c.Query("name", "")
+	if name == "" {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"detail": "name is required",
+		})
+	}
+
+	var actions []actionModel.Action
+	err = config.Db.Where(fmt.Sprintf("name like '%%%s%%'", name)).Find(&actions).Error
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"detail": err.Error(),
+		})
+	}
+
+	return c.Status(fiber.StatusOK).JSON(fiber.Map{
+		"data": actions,
 	})
 }
