# app/controllers/userController/controller.go
@@ -1,11 +1,13 @@
 package userController
 
 import (
-	"errors"
-	"fmt"
-	"pood/v2/app/models/tokenModel"
+	"encoding/json"
+	"github.com/gofiber/fiber/v2"
+	"pood/v2/app/controllers/userController/getUserActionsByUserService"
+	"pood/v2/app/models/userActionModel"
 	"pood/v2/app/models/userModel"
-	"pood/v2/config"
+	"pood/v2/app/services/tokenService"
+	"strconv"
 )
 
 type UserController struct{}
@@ -14,15 +16,52 @@ func NewUserController() *UserController {
 	return &UserController{}
 }
 
-func GetUserByToken(token tokenModel.Token) (*userModel.User, error) {
-	var user userModel.User
-	err := config.Db.
-		Where(userModel.User{ID: token.UserId}).
-		First(&user).
-		Error
+// GetUserActionByUser
+// @Summary Получить userActions юзера (private=false)
+// @Description Получить userActions юзера (private=false) по id
+// @Accept  json
+// @Produce json
+// @Tags    Users
+// @Success 200 {array} userActionModel.UserActionsResponse
+// @Failure 400 {object} defaultModel.FailedResponse
+// @Failure 401 {object} defaultModel.FailedResponse
+// @Param id path string true "id"
+// @Router  /user/{id}/actions [get]
+// @Security ApiKeyAuth
+func (UserController) GetUserActionByUser(c *fiber.Ctx) error {
+	_, err := tokenService.CheckToken(c)
 	if err != nil {
-		return nil, errors.New(fmt.Sprintf("user not found (id = %d)", token.UserId))
+		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{"detail": err.Error()})
 	}
 
-	return &user, nil
+	reqId, err := strconv.Atoi(c.Params("id", "0"))
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"detail": err.Error()})
+	}
+	if reqId == 0 {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"detail": "parameter id is incorrect"})
+	}
+
+	friend, err := getUserActionsByUserService.FindUserById(userModel.User{ID: uint(reqId)})
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"detail": err.Error()})
+	}
+
+	friendAction, err := getUserActionsByUserService.GetUserActions(*friend)
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"detail": err.Error()})
+	}
+
+	data, err := json.Marshal(friendAction)
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"detail": err.Error()})
+	}
+
+	var response []userActionModel.UserActionsResponse
+	err = json.Unmarshal(data, &response)
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"detail": err.Error()})
+	}
+
+	return c.Status(fiber.StatusOK).JSON(fiber.Map{"data": response})
 }
