# docs/swagger.json
@@ -14,7 +14,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Создать новый action и привязаться к нему по токену",
+                "description": "Создать новый action и привязаться к нему по токену\n- привязка по **id** или создание по остальным полям",
                 "consumes": [
                     "application/json"
                 ],
@@ -41,6 +41,51 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/defaultModel.SuccessResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/defaultModel.FailedResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/actions": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Actions"
+                ],
+                "summary": "Найти action по неполному совпадению имени",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "name",
+                        "name": "name",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/actionModel.Action"
+                            }
                         }
                     },
                     "401": {
@@ -119,14 +164,14 @@
                 }
             }
         },
-        "/userAction/done": {
-            "post": {
+        "/user/{id}/actions": {
+            "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "* action.type=1; required: user_action_id int;\n* action.type=2; required: user_action_id int;\n* action.type=3; required: user_action_id int, count float;",
+                "description": "Получить userActions юзера (private=false) по id",
                 "consumes": [
                     "application/json"
                 ],
@@ -134,25 +179,26 @@
                     "application/json"
                 ],
                 "tags": [
-                    "UserActions"
+                    "Users"
                 ],
-                "summary": "Сделал action",
+                "summary": "Получить userActions юзера (private=false)",
                 "parameters": [
                     {
-                        "description": "body",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/logModel.CreateLogRequest"
-                        }
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/defaultModel.SuccessResponse"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/userActionModel.UserActionsResponse"
+                            }
                         }
                     },
                     "400": {
@@ -200,6 +246,115 @@
                 "responses": {
                     "204": {
                         "description": "No Content",
+                        "schema": {
+                            "$ref": "#/definitions/defaultModel.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/defaultModel.FailedResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/defaultModel.FailedResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/userAction/{id}/done": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "**action.type=1**; **required**: user_action_id *int*; **not required**: description *string*;\n**action.type=2**; **required**: user_action_id *int*; **not required**: description *string*;\n**action.type=3**; **required**: user_action_id *int*, count *float*; **not required**: description *string*;",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "UserActions"
+                ],
+                "summary": "Сделал action",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/logModel.CreateLogRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/defaultModel.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/defaultModel.FailedResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/defaultModel.FailedResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/userAction/{id}/private": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Редактировать userAction по id по токену",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "UserActions"
+                ],
+                "summary": "Редактировать userAction",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/userActionModel.UpdateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/defaultModel.SuccessResponse"
                         }
@@ -428,6 +583,9 @@
         "actionModel.ActionCreateRequest": {
             "type": "object",
             "properties": {
+                "id": {
+                    "type": "integer"
+                },
                 "name": {
                     "type": "string"
                 },
@@ -464,14 +622,14 @@
                 "count": {
                     "type": "number"
                 },
+                "description": {
+                    "type": "string"
+                },
                 "end_time": {
                     "type": "string"
                 },
                 "start_start": {
                     "type": "string"
-                },
-                "user_action_id": {
-                    "type": "integer"
                 },
                 "value": {
                     "type": "string"
@@ -503,6 +661,9 @@
             "properties": {
                 "count": {
                     "type": "number"
+                },
+                "description": {
+                    "type": "string"
                 },
                 "end_time": {
                     "type": "string"
@@ -593,9 +754,6 @@
                         "unit_info": {
                             "type": "object",
                             "properties": {
-                                "description": {
-                                    "type": "string"
-                                },
                                 "name": {
                                     "type": "string"
                                 }
@@ -609,11 +767,8 @@
                 "id": {
                     "type": "integer"
                 },
-                "logs": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/logModel.Log"
-                    }
+                "private": {
+                    "type": "boolean"
                 }
             }
         },
@@ -623,11 +778,58 @@
                 "action": {
                     "$ref": "#/definitions/actionModel.Action"
                 },
+                "description": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
                 "start_time": {
                     "type": "string"
+                }
+            }
+        },
+        "userActionModel.UpdateRequest": {
+            "type": "object",
+            "properties": {
+                "private": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "userActionModel.UserActionsResponse": {
+            "type": "object",
+            "properties": {
+                "action": {
+                    "type": "object",
+                    "properties": {
+                        "id": {
+                            "type": "integer"
+                        },
+                        "name": {
+                            "type": "string"
+                        },
+                        "subtype": {
+                            "type": "integer"
+                        },
+                        "type": {
+                            "type": "integer"
+                        },
+                        "unit_info": {
+                            "type": "object",
+                            "properties": {
+                                "name": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         }
